src/objects/Financial_Transactional_Line_Data__c.object
<CustomObject>
    <description>A junction object to track financial transactions intended to drive sales commissions and other financial reporting.  Trigger written by 2020 populate this object dynamically.  This captures line level transactions and looks up to the Financial Transactional Header Data object.</description>
    <fields>
        <fullName>Account_Name_Holder__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Holding field to solve issue with financial transactions</inlineHelpText>
        <label>Account Name Holder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <description>Pulls in the related opportunities account name</description>
        <formula>Opportunity__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pulls in the related opportunities account name</inlineHelpText>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BSC_Event_Booking__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Looks up to BSC Event Booking to capture data on BSC Event Booking records. This is used for reports and also to drive visual force invoicing code / logic</description>
        <label>BSC Event Booking</label>
        <referenceTo>Special_Event_Booking__c</referenceTo>
        <relationshipLabel>Financial Transactional Line Data</relationshipLabel>
        <relationshipName>Financial_Transactional_Line_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BSC_Event_End_Date_Holder__c</fullName>
        <inlineHelpText>Holding field to solve issue with financial transactions</inlineHelpText>
        <label>BSC Event End Date Holder</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BSC_Event_End_Date__c</fullName>
        <description>Pulls in the Related Event Booking&apos;s Event End Date</description>
        <formula>BSC_Event_Booking__r.Special_Event__r.EndDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pulls in the Related Event Booking&apos;s Event End Date</inlineHelpText>
        <label>BSC Event End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BSC_Event_Start_Date_Holder__c</fullName>
        <label>BSC Event Start Date Holder</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BSC_Event_Start_Date__c</fullName>
        <description>Pulls in the Related Event Booking&apos;s Event Start Date</description>
        <formula>BSC_Event_Booking__r.Special_Event__r.StartDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pulls in the Related Event Booking&apos;s Event Start Date</inlineHelpText>
        <label>BSC Event Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Credit_Note_Status__c</fullName>
        <description>Checks on the Financial Transactional Header Data for a Sales Credit Note and adds text &quot;No credit note&quot; or &quot;Invoice credited / part credited&quot; depending on if there is one.</description>
        <formula>IF( ISBLANK(Financial_Transactional_Header_Data__r.Sales_Credit_Note__c ),&quot;No credit note&quot;,&quot;Invoice credited / part credited&quot;)</formula>
        <inlineHelpText>Checks on the Financial Transactional Header Data for a Sales Credit Note and adds text &quot;No credit note&quot; or &quot;Invoice credited / part credited&quot; depending on if there is one.</inlineHelpText>
        <label>Credit Note Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Transactional_Header_Data__c</fullName>
        <description>This relationship allows us to link transactional lines items up to header records.  This is neccessary to allow reporting on payments and credits by linking Salesforce Opportunity Line level items to Financial Force line level items and then look up to header to retrieve payment information.</description>
        <label>Financial Transactional Header Data</label>
        <referenceTo>Financial_Transactional_Header_Data__c</referenceTo>
        <relationshipLabel>Financial Transactional Line Data</relationshipLabel>
        <relationshipName>Financial_Transactional_Line_Data</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Invoice_Date_Holder__c</fullName>
        <inlineHelpText>Holding field to solve issue with financial transactions</inlineHelpText>
        <label>Invoice Date Holder</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <description>Pulls in the related invoice date</description>
        <formula>Sales_Invoice_Line_Item__r.c2g__Invoice__r.c2g__InvoiceDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pulls in the related invoice date</inlineHelpText>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Number_Holder__c</fullName>
        <inlineHelpText>Holding field to solve issue with financial transactions</inlineHelpText>
        <label>Invoice Number Holder</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <description>Pulls in the related invoice number</description>
        <formula>Sales_Invoice_Line_Item__r.c2g__Invoice__r.Name</formula>
        <inlineHelpText>Pulls in the related invoice number</inlineHelpText>
        <label>Invoice Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OPL_ID__c</fullName>
        <description>Holds OPL ID from Invoice Line Item</description>
        <label>OPL ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Account__c</fullName>
        <label>Opportunity Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Number_Holder__c</fullName>
        <inlineHelpText>Holding field to solve issue with financial transactions</inlineHelpText>
        <label>Opportunity Number Holder</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Number__c</fullName>
        <description>Pulls in the related opportunity number</description>
        <formula>Opportunity__r.Opportunity_Number__c</formula>
        <inlineHelpText>Pulls in the related opportunity number</inlineHelpText>
        <label>Opportunity Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Financial Transactional Line Data</relationshipLabel>
        <relationshipName>Financial_Transactional_Line_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Status__c</fullName>
        <description>Looks at whether there is a Sales Credit Note attached to the Financial Transactional Header Data, if there is, then it adds the Financial Transactional Header Data Payment Status, OR the Payment Status plus &quot; / Maybe credited, check invoice&quot;</description>
        <formula>IF( ISBLANK(Financial_Transactional_Header_Data__r.Sales_Credit_Note__c ),Financial_Transactional_Header_Data__r.Payment_Status__c, Financial_Transactional_Header_Data__r.Payment_Status__c +&quot; / Maybe credited, check invoice&quot;)</formula>
        <inlineHelpText>Looks at whether there is a Sales Credit Note attached to the Financial Transactional Header Data, if there is, then it adds the Financial Transactional Header Data Payment Status, OR the Payment Status plus &quot; / Maybe credited, check invoice&quot;</inlineHelpText>
        <label>Payment Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <formula>Product__r.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Financial Transactional Line Data</relationshipLabel>
        <relationshipName>Financial_Transactional_Line_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Invoice_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Provides a lookup to the Financial Force invoice line item.  This is used to link Opportunity product lines to the appropriate invoice line items.</description>
        <label>Sales Invoice Line Item</label>
        <referenceTo>c2g__codaInvoiceLineItem__c</referenceTo>
        <relationshipName>Financial_Transactional_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_invoice_Net_Line_amount_Holder__c</fullName>
        <inlineHelpText>Holding field to solve issue with financial transactions</inlineHelpText>
        <label>Sales invoice Net Line amount Holder</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_invoice_Net_Line_amount__c</fullName>
        <description>Pulls in the net value of the related sales invoice line item.</description>
        <formula>Sales_Invoice_Line_Item__r.c2g__NetValue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pulls in the net value of the related sales invoice line item.</inlineHelpText>
        <label>Sales invoice Net Line amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subscription_End_Date_Holder__c</fullName>
        <inlineHelpText>Holding field to solve issue with financial transactions</inlineHelpText>
        <label>Subscription End Date Holder</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subscription_End_Date__c</fullName>
        <description>Pulls in the related subscription end date</description>
        <formula>Subscription_Line__r.Subscription__r.End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pulls in the related subscription end date</inlineHelpText>
        <label>Subscription End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subscription_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Looks up to Subscription Line to capture data on Subscription records.  This is used for reports and also to drive visual force invoicing code / logic</description>
        <label>Subscription Line</label>
        <referenceTo>Subscription_Line__c</referenceTo>
        <relationshipLabel>Financial Transactional Line Data</relationshipLabel>
        <relationshipName>Financial_Transactional_Line_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subscription_Product_Codes_Holder__c</fullName>
        <description>Holding field to solve issue with financial transactions</description>
        <label>Subscription Product Codes Holder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Product_Codes__c</fullName>
        <description>To pull in the related subscription&apos;s product codes (used for customer services reporting)</description>
        <formula>Subscription_Line__r.Subscription__r.Product_Codes__c</formula>
        <inlineHelpText>To pull in the related subscription&apos;s product codes (used for customer services reporting)</inlineHelpText>
        <label>Subscription Product Codes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Ref_Holder__c</fullName>
        <inlineHelpText>Holding field to solve issue with financial transactions</inlineHelpText>
        <label>Subscription Ref Holder</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Ref__c</fullName>
        <description>pulls in the related subscription ref (for customer services reports)</description>
        <formula>Subscription_Line__r.Subscription__r.Name</formula>
        <inlineHelpText>pulls in the related subscription ref (for customer services reports)</inlineHelpText>
        <label>Subscription Ref</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Start_Date_Holder__c</fullName>
        <inlineHelpText>Holding field to solve issue with financial transactions</inlineHelpText>
        <label>Subscription Start Date Holder</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subscription_Start_Date__c</fullName>
        <description>Pulls in the related subscription start date</description>
        <formula>Subscription_Line__r.Subscription__r.Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pulls in the related subscription start date</inlineHelpText>
        <label>Subscription Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subscription_Status_Holder__c</fullName>
        <inlineHelpText>Holding field to solve issue with financial transactions</inlineHelpText>
        <label>Subscription Status Holder</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Status__c</fullName>
        <description>pulls in the related subscription status (used for customer service reports)</description>
        <formula>TEXT(Subscription_Line__r.Subscription__r.Status__c)</formula>
        <inlineHelpText>pulls in the related subscription status (used for customer service reports)</inlineHelpText>
        <label>Subscription Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Type_Holder__c</fullName>
        <inlineHelpText>Holding field to solve issue with financial transactions</inlineHelpText>
        <label>Subscription Type Holder</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Type__c</fullName>
        <description>Pulls in the related subscription type field (so that subscriptions can tell if it is a new or renewal)</description>
        <formula>TEXT( Subscription_Line__r.Subscription__r.Type__c )</formula>
        <inlineHelpText>Pulls in the related subscription type field (so that subscriptions can tell if it is a new or renewal)</inlineHelpText>
        <label>Subscription Type</label>
        <type>Text</type>
    </fields>
    <label>Financial Transactional Line Data</label>
    <nameField>
        <displayFormat>FT-{000000}</displayFormat>
        <label>Financial Transactional Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financial Transactional Line Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>